Version control tests for scheduler events